[project]
name = "assistente-academico-upf"
version = "0.1.0"
description = "Assistente Acadêmico Multiagente com LLMs locais, RAG e MCP para consulta de documentos institucionais da UPF"
authors = [
    { name = "Carlos Henrique Güllich Scherer" },
    { name = "Pedro Rafael Domenighi" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5.0",
    "mcp>=1.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "pypdf>=5.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
